feat: 상세 화면 기본 정보 순서 변경, "다른 제목" 추가 및 리펙토링
백엔드:
1. 상세
- AniList DTO, 각 응답 오브젝트, comicsDetail.graphql 에 "synonyms" 추가

프론트엔드:
1. 상세
- 만화의 경우에 백엔드에서 가져온 "다른 제목"(synonyms) 표시
- 기본 정보 항목 순서 변경 및 리펙토링
2. 인물
- 인물 기본 정보 글자 크기 xl → lg 로 변경
